set sync options

--- a/cluster/applications/prometheus.yaml
+++ b/cluster/applications/prometheus.yaml
@@ -18,6 +18,8 @@ spec:
   project: default
   revisionHistoryLimit: 0
   syncPolicy:
+    syncOptions:
+      - Replace=true
     automated:
       prune: true
       selfHeal: true
