--- a/cluster/applications/prometheus.yaml
+++ b/cluster/applications/prometheus.yaml
@@ -15,7 +15,7 @@ spec:
     targetRevision: 34.1.1
     path: cluster/prometheus
     helm:
-      valudFiles:
+      valueFiles:
         - values.yaml
 
   syncPolicy:
