--- a/cluster/nginx-ingress/base.yaml
+++ b/cluster/nginx-ingress/base.yaml
@@ -474,25 +474,10 @@ spec:
     - port: metrics
       interval: 30s
       relabelings:
-      - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_instance]
-        action: keep
+      - sourceLabels: [__meta_kubernetes_service_label_app_kubernetes_io_instance]
+        action: replace
         regex: "nginx-ingress"
-      - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scheme]
-        action: replace
-        target_label: __scheme__
-        regex: (https?)
-      - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
-        action: replace
-        target_label: __metrics_path__
-        regex: (.+)
-      - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
-        action: replace
-        target_label: __address__
-        regex: ([^:]+)(?::\d+)?;(\d+)
-        replacement: $1:$2
-      - source_labels: [__meta_kubernetes_service_name]
-        regex: prometheus-server
-        action: drop
+        replacement: "ingress-nginx"
   namespaceSelector:
     matchNames:
       - ingress-nginx
