--- a/cluster/nginx-ingress/base.yaml
+++ b/cluster/nginx-ingress/base.yaml
@@ -480,7 +480,7 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: ingress-nginx
-      app.kubernetes.io/instance: nginx-ingress
+      app.kubernetes.io/instance: ingress-nginx
       app.kubernetes.io/component: controller
   
     
