change argo cd instance label to prevent conflict with helm
argocd uses app.kubernetes.io/instance to keep track of each app's resources.
But this can conflict with the values that helm uses. In this case, argo set the instance to "nginx-ingress" which caused the ServiceMonitor labels not to match, leading to the issues with scraping metrics. See https://github.com/argoproj/argo-cd/issues/1482

--- a/cluster/argocd/overlay/argo-cm.yaml
+++ b/cluster/argocd/overlay/argo-cm.yaml
@@ -101,6 +101,7 @@ data:
   # You can have bannercontent without a bannerurl, but not the other way around.
   ui.bannerurl: "https://github.com/Biosimulations"
 
+  application.instanceLabelKey: argocd.argoproj.io/instance
   # Plugins for argo
   configManagementPlugins: |
     - name: kustomized-helm
