--- a/cluster/nginx-ingress/base.yaml
+++ b/cluster/nginx-ingress/base.yaml
@@ -473,16 +473,14 @@ spec:
   endpoints:
     - port: metrics
       interval: 30s
-        
   namespaceSelector:
     matchNames:
       - ingress-nginx
   selector:
     matchLabels:
       app.kubernetes.io/name: ingress-nginx
-      
-  
-    
+      app.kubernetes.io/instance: ingress-nginx
+      app.kubernetes.io/component: controller
 ---
 # Source: ingress-nginx/templates/admission-webhooks/validating-webhook.yaml
 # before changing this value, check the required kubernetes version
