--- a/cluster/applications/prometheus.yaml
+++ b/cluster/applications/prometheus.yaml
@@ -38,7 +38,7 @@ spec:
             tls:
               - secretName: monitoring-tls
                 hosts:
-                  monitoring.biosimulations.org
+                  - monitoring.biosimulations.org
             hosts:
               - monitoring.biosimulations.org
             paths:
