add argo workflows servicce monitor

--- a/cluster/argo-workflows/kustomization.yaml
+++ b/cluster/argo-workflows/kustomization.yaml
@@ -5,4 +5,5 @@ resources:
 - ./install.yaml
 - ./ingress.yaml
 - ./artifact-repository.yaml
+- ./service-monitor.yaml
 - ../../secrets/argo-workflows
