setup workflws to use dex for auth

--- a/cluster/argo-workflows/kustomization.yaml
+++ b/cluster/argo-workflows/kustomization.yaml
@@ -7,3 +7,6 @@ resources:
 - ./artifact-repository.yaml
 - ./service-monitor.yaml
 - ../../secrets/argo-workflows
+
+patchesStrategicMerge:
+  - argo-server.yaml
