--- a/cluster/argocd/kustomization.yaml
+++ b/cluster/argocd/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
 - applications.yaml
 - overlay/argocd-repositories.yaml
 - ../../secrets/cluster/argocd-repo-creds.yaml
-
+- ../../secrets/argo-cd
 # changes to config maps
 
 patchesStrategicMerge:
@@ -18,6 +18,7 @@ patchesStrategicMerge:
 - overlay/argo-cd-known-hosts.yaml
 - overlay/argo-dex-deployment.yaml
 - ../../secrets/cluster/argo-secret.yaml
+
 
       
 
