--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -22,7 +22,7 @@ images:
 - name: ghcr.io/biosimulations/simulators-api
   newTag: v9.14.0
 - name: hdfgroup/hsds
-  newTag: v0.7beta12
+  newTag: ad8597f
 #scale down dev deployment
 replicas:
 - count: 0
