--- a/overlays/prod/kustomization.yaml
+++ b/overlays/prod/kustomization.yaml
@@ -21,7 +21,7 @@ images:
 - name: ghcr.io/biosimulations/simulators-api
   newTag: v9.13.6
 - name: hdfgroup/hsds
-  newTag: v0.7beta12
+  newTag: 36a7c61
 
 #scale up prod ev deployment
 replicas:
