update nats to use helm chart generated resources

--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -44,6 +44,7 @@ replicas:
 resources:
 - dev.yaml
 - combine-ingress.yaml
+- nats.yaml
 - api-ingress.yaml
 - hsds-ingress.yaml
 - biosimulators-ingress.yaml
