--- a/config/prod/hsds/config.yaml
+++ b/config/prod/hsds/config.yaml
@@ -85,3 +85,10 @@ domain_req_max_objects_limit: 500  # maximum number of objects to return in GET 
 # the following two values with give backof times of approx: 0.2, 0.4, 0.8, 1.6, 3.2, 6.4, 12.8
 dn_max_retries: 7  # number of time to retry DN requests
 dn_retry_backoff_exp: 0.1  # backoff factor for retries
+# DEPRECATED - the remaining config values are not used in currently but kept for backward compatibility with older container images
+aws_lambda_chunkread_function: null  # name of aws lambda function for chunk reading
+aws_lambda_threshold: 4   # number of chunks per node per request to reach before using lambda
+aws_lambda_max_invoke: 1000  # max number of lambda functions to invoke simultaneously
+aws_lambda_gateway: null # use lambda endpoint for region HSDS is running in
+write_zero_chunks: False # write chunk to storage even when it's all zeros (or in general equial to the fill value)
+max_chunks_per_request: 1000  # maximum number of chunks to be serviced by one request
