--- a/base/apps/hsds-service.yaml
+++ b/base/apps/hsds-service.yaml
@@ -73,6 +73,12 @@ spec:
                 secretKeyRef:
                   name: aws-auth-keys
                   key: aws_secret_access_key
+          livenessProbe:
+            httpGet:
+              path: /info
+              port: 5101
+            initialDelaySeconds: 5
+            periodSeconds: 5
           volumeMounts:
             - name: accounts
               mountPath: "/config/passwd.txt"
@@ -91,6 +97,12 @@ spec:
                 command: ["/sbin/killall5", "-15"]
             
           imagePullPolicy: Always
+          livenessProbe:
+            httpGet:
+              path: /info
+              port: 6101
+            initialDelaySeconds: 5
+            periodSeconds: 5
           ports:
             - containerPort: 6101
           env:
@@ -108,7 +120,6 @@ spec:
                 secretKeyRef:
                   name: aws-auth-keys
                   key: aws_secret_access_key
-
           volumeMounts:
             - name: accounts
               mountPath: "/config/password/passwd.txt"
