restore dev site to use dev resources not prod database, data, hpc

--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -48,6 +48,6 @@ resources:
 - api-ingress.yaml
 - hsds-ingress.yaml
 - biosimulators-ingress.yaml
-- ../../secrets/prod
-- ../../config/dev_use_prod
+- ../../secrets/dev
+- ../../config/dev
 - ../../base
