--- a/config/dev/hsds/override.yaml
+++ b/config/dev/hsds/override.yaml
@@ -1,7 +1,7 @@
 default_public: true # new domains are publically readable by default
 hsds_endpoint: https://data.biosimulations.dev # used for hateos links in response
 aws_s3_gateway: https://storage.googleapis.com # use endpoint for the region HSDS is running in, e.g. 'https://s3.amazonaws.com' for us-east-1
-bucket_name: biosim-hsds-dev-central # set to use a default bucket, otherwise bucket param is needed for all requests
+bucket_name: biosim-hsds-dev # set to use a default bucket, otherwise bucket param is needed for all requests
 log_level: INFO # log level.  One of ERROR, WARNING, INFO, DEBUG
 server_name: BioSimulations Data Service # this gets returned in the about request
 greeting: Thank you for using BioSimulations!
