--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -22,7 +22,7 @@ images:
 - name: ghcr.io/biosimulations/simulators-api
   newTag: v9.48.2
 - name: hdfgroup/hsds
-  newTag: v0.8.0
+  newTag: "0.8"
 #scale down dev deployment
 replicas:
 - count: 0
