--- a/cluster/applications/prometheus.yaml
+++ b/cluster/applications/prometheus.yaml
@@ -34,7 +34,7 @@ spec:
             enabled: true
             annotations:
               cert-manager.io/cluster-issuer: "letsencrypt-prod"
-              kubernetes.io/ingress.class: nginx
+              ingress.class: nginx
               
             tls:
               - secretName: monitoring-tls
