--- a/overlays/test/kustomization.yaml
+++ b/overlays/test/kustomization.yaml
@@ -10,34 +10,34 @@ namespace: test
 
 images:
 - name: ghcr.io/biosimulations/account-api
-  newTag: sha-d39bc54
+  newTag: sha-c6c3629
 - name: ghcr.io/biosimulations/api
-  newTag: sha-d39bc54
+  newTag: sha-c6c3629
 - name: ghcr.io/biosimulations/combine-api
-  newTag: sha-d39bc54
+  newTag: sha-c6c3629
 - name: ghcr.io/biosimulations/simdata-api
-  newTag: sha-d39bc54
+  newTag: sha-c6c3629
 - name: ghcr.io/biosimulations/dispatch-service
-  newTag: sha-d39bc54
+  newTag: sha-c6c3629
 - name: ghcr.io/biosimulations/mail-service
-  newTag: sha-d39bc54
+  newTag: sha-c6c3629
 - name: ghcr.io/biosimulations/simulators-api
-  newTag: sha-d39bc54
+  newTag: sha-c6c3629
 #scale down dev deployment
 replicas:
-- count: 0
+- count: 1
   name: account-api
-- count: 0
+- count: 1
   name: api
-- count: 0
+- count: 1
   name: dispatch-service
 - count: 1
   name: simdata-api
-- count: 0
+- count: 1
   name: mail-service
-- count: 0
+- count: 1
   name: simulators-api
-- count: 0
+- count: 1
   name: combine-api
 
 # create patches section to add imagePullSecrets to all containers
@@ -58,7 +58,7 @@ patches:
 resources:
 - test.yaml
 - combine-ingress.yaml
-# - nats.yaml
+- nats.yaml
 - api-ingress.yaml
 - simdata-ingress.yaml
 - biosimulators-ingress.yaml
