--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
         kustomize edit set image ghcr.io/biosimulations/simulators-api:${{ github.event.inputs.tag }}
         kustomize edit set image ghcr.io/biosimulations/mail-service:${{ github.event.inputs.tag }}
         kustomize edit set image ghcr.io/biosimulations/combine-api:${{ github.event.inputs.tag }}
+        kustomize edit set image ghcr.io/biosimulations/simdata-api:${{ github.event.inputs.tag }}
     
     - name: Remove Kustomize
       run: |
