--- a/overlays/test/kustomization.yaml
+++ b/overlays/test/kustomization.yaml
@@ -10,19 +10,19 @@ namespace: test
 
 images:
 - name: ghcr.io/biosimulations/account-api
-  newTag: sha-c6c3629
+  newTag: v9.55.0
 - name: ghcr.io/biosimulations/api
-  newTag: sha-c6c3629
+  newTag: v9.55.0
 - name: ghcr.io/biosimulations/combine-api
-  newTag: sha-c6c3629
+  newTag: v9.55.0
 - name: ghcr.io/biosimulations/simdata-api
-  newTag: sha-c6c3629
+  newTag: v9.55.0
 - name: ghcr.io/biosimulations/dispatch-service
-  newTag: sha-c6c3629
+  newTag: v9.55.0
 - name: ghcr.io/biosimulations/mail-service
-  newTag: sha-c6c3629
+  newTag: v9.55.0
 - name: ghcr.io/biosimulations/simulators-api
-  newTag: sha-c6c3629
+  newTag: v9.55.0
 #scale down dev deployment
 replicas:
 - count: 1
