--- a/overlays/test/kustomization.yaml
+++ b/overlays/test/kustomization.yaml
@@ -3,10 +3,11 @@ kind: Kustomization
 
 # Change namespace, labels, and name to dev
 commonLabels:
-  environment: prod
-namespace: prod
+  environment: test
+namespace: test
 
 #Change the tag on the images
+
 images:
 - name: ghcr.io/biosimulations/account-api
   newTag: v9.55.0
@@ -22,31 +23,45 @@ images:
   newTag: v9.55.0
 - name: ghcr.io/biosimulations/simulators-api
   newTag: v9.55.0
-
-#scale up prod ev deployment
+#scale down dev deployment
 replicas:
-- count: 0
+- count: 1
   name: account-api
-- count: 3
+- count: 1
   name: api
-- count: 5
+- count: 1
   name: dispatch-service
-- count: 3
+- count: 1
   name: simdata-api
-- count: 3
+- count: 1
   name: mail-service
-- count: 3
+- count: 1
   name: simulators-api
-- count: 3
+- count: 1
   name: combine-api
-#Use the prod version of the secrets and ingress
+
+# create patches section to add imagePullSecrets to all containers
+# and remove readiness and liveness probes from account-api
+patches:
+- target:
+    kind: Deployment
+    labelSelector: registry=ghcr.io
+  patch: |-
+    - op: add
+      path: /spec/template/spec/imagePullSecrets
+      value:
+      - name: regcred
+    - op: remove
+      path: /spec/template/spec/containers/0/resources
+
+#Use the development version of the secrets and ingress
 resources:
-- prod.yaml
-- nats.yaml
-- ../../secrets/prod
-- ../../config/prod
-- biosimulations-ingress.yaml
-- biosimulators-ingress.yaml
+- test.yaml
 - combine-ingress.yaml
+- nats.yaml
+- api-ingress.yaml
 - simdata-ingress.yaml
+- biosimulators-ingress.yaml
+- ../../secrets/test
+- ../../config/test
 - ../../base
