--- a/overlays/dev/simdata-ingress.yaml
+++ b/overlays/dev/simdata-ingress.yaml
@@ -14,7 +14,7 @@ spec:
   tls:
     - hosts:
       - data.biosimulations.dev
-      secretName: dev-hsds-ingress-tls
+      secretName: simdata-dev-ingress-tls
   rules:
   - host: data.biosimulations.dev
     http:
