Revert "use simdata-api tls for prod dev and test"
This reverts commit 0be3b87f46e6363bcb0480c3629123daca762531.

--- a/overlays/dev/simdata-ingress.yaml
+++ b/overlays/dev/simdata-ingress.yaml
@@ -14,7 +14,7 @@ spec:
   tls:
     - hosts:
       - data.biosimulations.dev
-      secretName: simdata-dev-ingress-tls
+      secretName: dev-hsds-ingress-tls
   rules:
   - host: data.biosimulations.dev
     http:
