Revert "switch simdata.api.biosim to data.biosim, and reuse hsds tls cert"
This reverts commit d769597c42271c9c9104593290380773c0aaceb6.

--- a/overlays/prod/simdata-ingress.yaml
+++ b/overlays/prod/simdata-ingress.yaml
@@ -13,10 +13,10 @@ metadata:
 spec:
   tls:
     - hosts:
-      - data.biosimulations.org
-      secretName: prod-hsds-ingress-tls
+      - simdata.api.biosimulations.org
+      secretName: simdata-ingress-tls
   rules:
-  - host: data.biosimulations.org
+  - host: simdata.api.biosimulations.org
     http:
       paths:
       - pathType: Prefix
@@ -26,6 +26,13 @@ spec:
             name: simdata-api
             port: 
               number: 80              
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: simdata-api
+            port: 
+              number: 80                        
       - pathType: Prefix
         path: "/health"
         backend:
