Revert "fix ingress hostname for simdata-api"
This reverts commit 197baa87f30d5878365df31d7c6bd4a8fe26cefa.

--- a/overlays/dev/simdata-ingress.yaml
+++ b/overlays/dev/simdata-ingress.yaml
@@ -13,10 +13,10 @@ metadata:
 spec:
   tls:
     - hosts:
-      - simdata.api.biosimulations.dev
+      - data.biosimulations.dev
       secretName: simdata-ingress-tls
   rules:
-  - host: simdata.api.biosimulations.dev
+  - host: data.biosimulations.dev
     http:
       paths:
       - pathType: Prefix
