Revert "remove HSDS add simdatda-api"
This reverts commit 807cd8a772868852237f66e8f58f7e63ebde5819.

--- a/base/resources/jaeger.yaml
+++ b/base/resources/jaeger.yaml
@@ -7,7 +7,7 @@ spec:
   ingress:
     enabled: true
     annotations:
-      ingress.class: "nginx"
+      kubernetes.io/ingress.class: "nginx"
       cert-manager.io/cluster-issuer: "letsencrypt-prod"
     hosts:
       - tracing.api.biosimulations.dev
