--- a/cluster/argo-workflows/ingress.yaml
+++ b/cluster/argo-workflows/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argo
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    ingress.class: nginx    
+    kubernetes.io/ingress.class: nginx    
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   rules:
