--- a/config/dev_use_prod/shared.env
+++ b/config/dev_use_prod/shared.env
@@ -1,7 +1,7 @@
 # Settings common to all apps
 
 #Server Settings
-ENV=test
+ENV=dev
 SERVER_PORT=3333
 SERVER_PAYLOAD_LIMIT=71mb
 
@@ -22,9 +22,9 @@ NATS_HOST=nats://nats:4222
 
 # Storage buckets
 STORAGE_ENDPOINT=https://storage.googleapis.com
-STORAGE_BUCKET=files.biosimulations.dev
-STORAGE_REGION=us-east4
-TEMP_STORAGE_BUCKET=biosim-temp-dev
+STORAGE_BUCKET=files.biosimulations.org
+STORAGE_REGION=us-east-1
+TEMP_STORAGE_BUCKET=biosim-temp-prod
 TEMP_STORAGE_MAX_AGE=1
 #STORAGE_ACCESS_KEY=
 #STORAGE_SECRET=
@@ -32,6 +32,16 @@ TEMP_STORAGE_MAX_AGE=1
 #Redis Settings
 REDIS_HOST=redis-primary
 REDIS_PORT=6379
+
+# HSDS INFORMATION
+#HSDS_USERNAME=
+#HSDS_PASSWORD=
+HSDS_BASEPATH=http://hsds:80
+HSDS_EXTERNAL_BASEPATH=https://data.biosimulations.dev
+
+# HSDS client
+HSDS_CLIENT_INITIAL_INTERVAL=100 # ms
+HSDS_CLIENT_MAX_RETRIES=12
 
 #Public URLS
 DISPATCH_URL=https://api.biosimulations.dev/
