--- a/overlays/dev/biosimulators-ingress.yaml
+++ b/overlays/dev/biosimulators-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     name: dev-simulators-ingress
   annotations:
-      ingress.class: "nginx"
+      kubernetes.io/ingress.class: "nginx"
       cert-manager.io/cluster-issuer: "letsencrypt-prod"
       nginx.ingress.kubernetes.io/proxy-body-size: "600m"
       nginx.org/client-max-body-size: "600m"
