--- a/overlays/prod/combine-ingress.yaml
+++ b/overlays/prod/combine-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     name: combine-ingress
   annotations:
-    ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/proxy-body-size: "1100m"
     nginx.org/client-max-body-size: "1100m"
