--- a/overlays/prod/kustomization.yaml
+++ b/overlays/prod/kustomization.yaml
@@ -9,19 +9,19 @@ namespace: prod
 #Change the tag on the images
 images:
 - name: ghcr.io/biosimulations/account-api
-  newTag: v9.55.0
+  newTag: v9.54.1
 - name: ghcr.io/biosimulations/api
-  newTag: v9.55.0
+  newTag: v9.54.1
 - name: ghcr.io/biosimulations/combine-api
-  newTag: v9.55.0
-- name: ghcr.io/biosimulations/simdata-api
-  newTag: v9.55.0
+  newTag: v9.54.1
 - name: ghcr.io/biosimulations/dispatch-service
-  newTag: v9.55.0
+  newTag: v9.54.1
 - name: ghcr.io/biosimulations/mail-service
-  newTag: v9.55.0
+  newTag: v9.54.1
 - name: ghcr.io/biosimulations/simulators-api
-  newTag: v9.55.0
+  newTag: v9.54.1
+- name: hdfgroup/hsds
+  newTag: 36a7c61
 
 #scale up prod ev deployment
 replicas:
@@ -31,8 +31,8 @@ replicas:
   name: api
 - count: 5
   name: dispatch-service
-- count: 3
-  name: simdata-api
+- count: 7
+  name: hsds
 - count: 3
   name: mail-service
 - count: 3
@@ -48,5 +48,5 @@ resources:
 - biosimulations-ingress.yaml
 - biosimulators-ingress.yaml
 - combine-ingress.yaml
-- simdata-ingress.yaml
+- hsds-ingress.yaml
 - ../../base
