--- a/overlays/test/kustomization.yaml
+++ b/overlays/test/kustomization.yaml
@@ -60,9 +60,8 @@ resources:
 - combine-ingress.yaml
 - nats.yaml
 - api-ingress.yaml
-- simdata-api.yaml
 - simdata-ingress.yaml
 - biosimulators-ingress.yaml
 - ../../secrets/test
 - ../../config/test
-- ../../base
+- ../../base_without_hsds
